# workflow_templates_itk

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: publish.yml  validate-templates.yml
docs/: SPEC.md
scripts/: validate_templates.py
templates/: api_bfl_flux_pro_t2i.json  api_ideogram_v3_t2i.json  api_kling_i2v.json  api_luma_i2v.json  api_luma_photon_i2i.json  gligen_textbox_example.json  gpt_image_1_i2i.json  gpt_image_1_t2i.json  index.json  sd35l.json
